<resources>
    <string name="app_name">My CalC</string>
    <string name="background_image">background image</string>
    <string name="get_started">GET STARTED</string>
    <string name="zero">0</string>
    <string name="ac">AC</string>
    <string name="seven">7</string>
    <string name="four">4</string>
    <string name="one">1</string>
    <string name="percent">%</string>
    <string name="back">BACK</string>
    <string name="eight">8</string>
    <string name="five">5</string>
    <string name="two">2</string>
    <string name="slash">/</string>
    <string name="nine">9</string>
    <string name="six">6</string>
    <string name="three">3</string>
    <string name="dot">.</string>
    <string name="star">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="TextView_hint">Enter Here</string>
    <string name="power">^</string>
</resources>
