<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sahil.my_calc.Controller.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35097003" />


    <TextView
        android:id="@+id/TextViewBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:hint="@string/TextView_hint"
        android:textColorLink="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ClearAllButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/holo_red_dark"
<<<<<<< HEAD
                    android:text="AC"
=======
                    android:onClick="ClearAllBtnClicked"
                    android:text="@string/ac"
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
                    android:textColorLink="@android:color/holo_orange_dark"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/SevenButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="7"
                    android:textSize="24sp" />
=======
                    android:onClick="SevenBtnClicked"
                    android:text="@string/seven"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/FourButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="4"
                    android:textSize="24sp" />
=======
                    android:onClick="FourBtnClicked"
                    android:text="@string/four"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/OneButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="1"
                    android:textSize="24sp" />
=======
                    android:onClick="OneBtnClicked"
                    android:text="@string/one"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/PercentButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="%"
                    android:textSize="24sp" />
=======
                    android:onClick="PercentBtnClicked"
                    android:text="@string/percent"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/EraseOneButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="BACK"
                    android:textSize="24sp" />
=======
                    android:onClick="EraseOneBtnClicked"
                    android:text="@string/back"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/EightButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="8"
                    android:textSize="24sp" />
=======
                    android:onClick="EightBtnClicked"
                    android:text="@string/eight"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/FiveButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="5"
                    android:textSize="24sp" /></LinearLayout>
=======
                    android:onClick="FiveBtnClicked"
                    android:text="@string/five"
                    android:textSize="18sp" />
            </LinearLayout>
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/TwoButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="2"
                    android:textSize="24sp" />
=======
                    android:onClick="TwoBtnClicked"
                    android:text="@string/two"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ZeroButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="0"
                    android:textSize="24sp" />
=======
                    android:onClick="ZeroBtnClicked"
                    android:text="@string/zero"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/DivideButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="/"
                    android:textSize="24sp" />
=======
                    android:onClick="DivideBtnClicked"
                    android:text="@string/slash"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/NineButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="9"
                    android:textSize="24sp" />
=======
                    android:onClick="NineBtnClicked"
                    android:text="@string/nine"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/SixButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="6"
                    android:textSize="24sp" />
=======
                    android:onClick="SixBtnClicked"
                    android:text="@string/six"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ThreeButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="3"
                    android:textSize="24sp" />
=======
                    android:onClick="ThreeBtnClicked"
                    android:text="@string/three"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/DecimalButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="."
                    android:textSize="24sp" />
=======
                    android:onClick="DecimalBtnClicked"
                    android:text="@string/dot"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/MultiplyButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="*"
                    android:textSize="24sp" />
=======
                    android:onClick="MultiplyBtnClicked"
                    android:text="@string/star"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/MinusButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="-"
                    android:textSize="24sp" />
=======
                    android:onClick="MinusBtnClicked"
                    android:text="@string/minus"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/plusButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:text="+"
                    android:textSize="24sp" />
=======
                    android:onClick="plusBtnClicked"
                    android:text="@string/plus"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:orientation="vertical">

                <Button
                    android:id="@+id/EqualButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/holo_orange_dark"
<<<<<<< HEAD
                    android:text="="
                    android:textSize="24sp" />
=======
                    android:onClick="EqualBtnClicked"
                    android:text="@string/equal"
                    android:textSize="18sp" />
>>>>>>> 05617e2d29bc53daf04eb9bebfed7f5be8fa7f31
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
